@@ -1,4 +1,5 @@
 {{ $NEXT }}
+    - fix named_index_and_type.t when Elasticsearch isn't installed
 
 0.001     2014-03-07 12:49:00+01:00 Europe/Vienna
     - initial release
